--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
 	padding: 20px;
 	text-align: center;
 	border-radius: 3px;
+	display: none;
 }
 
 .city {
@@ -58,7 +59,7 @@ body {
 	margin-bottom: 2rem;
 }
 
-.temp-image {
+.temp-img {
 	width: 50px;
 	margin-right: 10px;
 }
